syntax = "proto3";

package organization.v1; // TODO: Should maybe be renamed to `fundament.v1`?

import "v1/common.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/fundament-oss/fundament/organization-api/pkg/proto/gen/v1;organizationv1";

// ClusterService manages Kubernetes clusters
service ClusterService {
  // List all clusters for the current organization
  rpc ListClusters(ListClustersRequest) returns (ListClustersResponse);

  // Get detailed information about a specific cluster
  rpc GetCluster(GetClusterRequest) returns (GetClusterResponse);

  // Create a new cluster
  rpc CreateCluster(CreateClusterRequest) returns (CreateClusterResponse);

  // Update cluster configuration
  rpc UpdateCluster(UpdateClusterRequest) returns (google.protobuf.Empty);

  // Delete a cluster
  rpc DeleteCluster(DeleteClusterRequest) returns (google.protobuf.Empty);

  // Get cluster activity log
  rpc GetClusterActivity(GetClusterActivityRequest) returns (GetClusterActivityResponse);

  // Download kubeconfig for a cluster
  rpc GetKubeconfig(GetKubeconfigRequest) returns (GetKubeconfigResponse);

  // List node pools for a cluster
  rpc ListNodePools(ListNodePoolsRequest) returns (ListNodePoolsResponse);

  // Get a node pool by ID
  rpc GetNodePool(GetNodePoolRequest) returns (GetNodePoolResponse);

  // Create a node pool in a cluster
  rpc CreateNodePool(CreateNodePoolRequest) returns (CreateNodePoolResponse);

  // Update a node pool
  rpc UpdateNodePool(UpdateNodePoolRequest) returns (google.protobuf.Empty);

  // Delete a node pool
  rpc DeleteNodePool(DeleteNodePoolRequest) returns (google.protobuf.Empty);

  // List installs for a cluster
  rpc ListInstalls(ListInstallsRequest) returns (ListInstallsResponse);

  // Add an install to a cluster
  rpc AddInstall(AddInstallRequest) returns (AddInstallResponse);

  // Remove an install from a cluster
  rpc RemoveInstall(RemoveInstallRequest) returns (google.protobuf.Empty);

  // List namespaces for a cluster
  rpc ListClusterNamespaces(ListClusterNamespacesRequest) returns (ListClusterNamespacesResponse);

  // Create a namespace in a cluster
  rpc CreateNamespace(CreateNamespaceRequest) returns (CreateNamespaceResponse);

  // Delete a namespace
  rpc DeleteNamespace(DeleteNamespaceRequest) returns (google.protobuf.Empty);
}

// List clusters request
message ListClustersRequest {
  string project_id = 10; // Optional: filter by project
}

// List clusters response
message ListClustersResponse {
  repeated ClusterSummary clusters = 10;
}

// Cluster summary information
message ClusterSummary {
  string id = 10;
  string name = 20;
  ClusterStatus status = 30;
  string region = 40;
}

// Get cluster request
message GetClusterRequest {
  string cluster_id = 10;
}

// Get cluster response
message GetClusterResponse {
  ClusterDetails cluster = 10;
}

// Detailed cluster information
message ClusterDetails {
  string id = 10;
  string name = 20;
  string region = 30;
  string kubernetes_version = 40;
  ClusterStatus status = 50;
  Timestamp created_at = 60;
  ResourceUsageInfo resource_usage = 70;
}

// Resource usage information for a cluster
message ResourceUsageInfo {
  ResourceUsage cpu = 10;
  ResourceUsage memory = 20;
  ResourceUsage disk = 30;
  ResourceUsage pods = 40;
}

// Node pool information
message NodePool {
  string id = 10;
  string name = 20;
  string machine_type = 30;
  int32 current_nodes = 40;
  int32 min_nodes = 50;
  int32 max_nodes = 60;
  NodePoolStatus status = 70;
  string version = 80;
}

// Cluster member information
message ClusterMember {
  string user_id = 10;
  string name = 20;
  string role = 30;
  Timestamp last_active = 40;
}

// Project associated with cluster
message ClusterProject {
  string project_id = 10;
  string name = 20;
  repeated string namespaces = 30;
}

// Create cluster request
message CreateClusterRequest {
  string name = 10;
  string region = 20;
  string kubernetes_version = 30;
}

// Node pool specification
message NodePoolSpec {
  string name = 10;
  string machine_type = 20;
  int32 autoscale_min = 30;
  int32 autoscale_max = 40;
}

// Create cluster response
message CreateClusterResponse {
  string cluster_id = 10;
}

// Update cluster request
message UpdateClusterRequest {
  string cluster_id = 10;
  optional string kubernetes_version = 20;
}

// Delete cluster request
message DeleteClusterRequest {
  string cluster_id = 10;
}

// Get cluster activity request
message GetClusterActivityRequest {
  string cluster_id = 10;
}

// Get cluster activity response
message GetClusterActivityResponse {
  repeated ActivityEntry activities = 10;
}

// Activity entry
message ActivityEntry {
  Timestamp timestamp = 10;
  string action = 20;
  string details = 30;
}

// Get kubeconfig request
message GetKubeconfigRequest {
  string cluster_id = 10;
}

// Get kubeconfig response
message GetKubeconfigResponse {
  string kubeconfig_content = 10;
}

// Create node pool request
message CreateNodePoolRequest {
  string cluster_id = 10;
  string name = 20;
  string machine_type = 30;
  int32 autoscale_min = 40;
  int32 autoscale_max = 50;
}

// Create node pool response
message CreateNodePoolResponse {
  string node_pool_id = 10;
}

// Update node pool request
message UpdateNodePoolRequest {
  string node_pool_id = 10;
  int32 autoscale_min = 20;
  int32 autoscale_max = 30;
}

// Delete node pool request
message DeleteNodePoolRequest {
  string node_pool_id = 10;
}

// List node pools request
message ListNodePoolsRequest {
  string cluster_id = 10;
}

// List node pools response
message ListNodePoolsResponse {
  repeated NodePool node_pools = 10;
}

// Get node pool request
message GetNodePoolRequest {
  string node_pool_id = 10;
}

// Get node pool response
message GetNodePoolResponse {
  NodePool node_pool = 10;
}

// Install information
message Install {
  string id = 10;
  string plugin_id = 20;
  Timestamp created_at = 30;
}

// List installs request
message ListInstallsRequest {
  string cluster_id = 10;
}

// List installs response
message ListInstallsResponse {
  repeated Install installs = 10;
}

// Add install request
message AddInstallRequest {
  string cluster_id = 10;
  string plugin_id = 20;
}

// Add install response
message AddInstallResponse {
  string install_id = 10;
}

// Remove install request
message RemoveInstallRequest {
  string install_id = 10;  // The UUID of the install record
}

// List cluster namespaces request
message ListClusterNamespacesRequest {
  string cluster_id = 10;
}

// List cluster namespaces response
message ListClusterNamespacesResponse {
  repeated ClusterNamespace namespaces = 10;
}

// Cluster namespace information
message ClusterNamespace {
  string id = 10;
  string name = 20;
  string project_id = 30;
  Timestamp created_at = 40;
}

// Create namespace request
message CreateNamespaceRequest {
  string project_id = 10;
  string cluster_id = 20;
  string name = 30;
}

// Create namespace response
message CreateNamespaceResponse {
  string namespace_id = 10;
}

// Delete namespace request
message DeleteNamespaceRequest {
  string namespace_id = 10;
}
